[package]
name = "pod-attacher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kube = { version = "0.84.0", default-features = false, features = ["client", "rustls-tls", "runtime", "ws"] }
k8s-openapi = { version = "0.18.0", features = ["v1_26"] }
inquire = "0.6.2"
tokio = { version = "1.14.0", features = ["full"] }
tokio-util = "0.7.8"
anyhow = "1.0.72"
crossterm = {version = "0.26.1", features = ["event-stream"] }
futures = "0.3.28"
futures-timer = "3.0.2"